[package]
name = "DNSQueryX"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-governor = "0.5"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"